# COIN-LIO

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: build_test_20.yml  build_test_kilted.yml
config/: line_removal.yaml  os_fieldai.json  params.yaml
docker/: Dockerfile
docker/scripts/: build_ros.sh  install_deps.sh
include/: common_lib.h  feature_manager.h  image_processing.h  imu_processing.h  preprocess.h  projector.h
launch/: calibrate.launch.py  coin_lio_launch_utils.py  mapping.launch.py  mapping_enwide.launch.py  mapping_fieldai.launch.py  mapping_newer_college.launch.py
rviz_cfg/: coinlio_viz.rviz
src/: calibration.cpp  feature_manager.cpp  image_processing.cpp  imu_processing.cpp  laserMapping.cpp  preprocess.cpp  projector.cpp
