<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coin_lio</name>
  <version>0.0.0</version>

  <description>
    This is the implementation of COIN-LIO, a LiDAR-inertial odometry and mapping system.
  </description>

  <maintainer email="patripfr@ethz.ch">patripfr</maintainer>

  <license>BSD</license>

  <author email="patripfr@ethz.ch">Patrick Pfreundschuh</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>pcl_conversions</depend>
  <depend>cv_bridge</depend>
  <depend>rosbag2_cpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>libgoogle-glog-dev</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
